--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -22,10 +22,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest flake8
-
-    - name: Lint code
-      run: flake8 .
+        pip install pytest
 
     - name: Run tests
       run: pytest
